--- a/.github/workflows/toc.yaml
+++ b/.github/workflows/toc.yaml
@@ -15,3 +15,5 @@ jobs:
     steps:
       - name: TOC Generator
         uses: technote-space/toc-generator@v4
+        with:
+          TOC_TITLE: ''
