Wait with awesome-lint GHA until generateTOC is done

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,6 +5,7 @@ on:
 jobs:
   awesome-lint:
     runs-on: ubuntu-latest
+    needs: generateTOC
     steps:
       - uses: actions/checkout@v3
         with:
